unpackaged/main/default/objects/RICSC_Wishlist__c/RICSC_Wishlist__c.object-meta.xml
<CustomObject>
    <label>Wishlist</label>
    <nameField>
        <displayFormat>Wishlist-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wishlists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>