unpackaged/main/default/objects/RICSC_Wishlist__c/fields/RICSC_Account__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to an Account - Release 1 SC</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Wishlists</relationshipLabel>
        <relationshipName>RICSC_WishlistsAccount</relationshipName>
        <type>Lookup</type>
    </CustomField>