unpackaged/main/default/objects/RICSC_Wishlist__c/fields/RICSC_ArticleDescription__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ArticleDescription__c</fullName>
        <description>Field coming from the source system to describe the Article type</description>
        <label>Article Description</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>