unpackaged/main/default/objects/RICSC_Wishlist__c/fields/RICSC_Collection__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Collection__c</fullName>
        <description>Description of the product in the wishlist</description>
        <label>Collection</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>