unpackaged/main/default/objects/RICSC_Wishlist__c/fields/RICSC_ItemScore__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ItemScore__c</fullName>
        <description>Estimated customer product score provided by the SA</description>
        <label>Item Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>