unpackaged/main/default/objects/RICSC_Wishlist__c/fields/RICSC_ItemStatusSource__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ItemStatusSource__c</fullName>
        <description>Technical field to captue the rating for the item from 1-5. Field used for a visualisation formula of rating</description>
        <label>Item Status Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>