unpackaged/main/default/objects/RICSC_Wishlist__c/fields/RICSC_Name__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Name__c</fullName>
        <description>Formula to display the name of the wishlist</description>
        <formula>IF( ISBLANK(RICSC_WishlistName__c) ,  Name , RICSC_WishlistName__c)</formula>
        <label>Name</label>
        <type>Text</type>
    </CustomField>