unpackaged/main/default/objects/RICSC_Wishlist__c/fields/RICSC_Picture__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Picture__c</fullName>
        <description>Url to the picture of the product</description>
        <formula>IMAGE(  RICSC_ProductName__r.RICSC_FrontPictureURL__c , "Image of this product will be added soon", 300, 300)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </CustomField>