unpackaged/main/default/objects/RICSC_Wishlist__c/fields/RICSC_ProductName__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ProductName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the product in the wishlist</description>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Wishlists (Product Name)</relationshipLabel>
        <relationshipName>RICSC_WishlistsProduct</relationshipName>
        <type>Lookup</type>
    </CustomField>