unpackaged/main/default/objects/RICSC_Wishlist__c/fields/RICSC_ReferenceNumber__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ReferenceNumber__c</fullName>
        <description>Ref Number of the Product</description>
        <label>Reference Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>