unpackaged/main/default/objects/RICSC_Wishlist__c/fields/RICSC_SalesAssociate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SalesAssociate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Sales Associate</description>
        <label>Sales Associate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Wishlists</relationshipLabel>
        <relationshipName>RICSC_WishlistsSalesAssociate</relationshipName>
        <type>Lookup</type>
    </CustomField>