unpackaged/main/default/objects/RICSC_Wishlist__c/fields/RICSC_SerialNumber__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SerialNumber__c</fullName>
        <description>Show the product serial number</description>
        <label>Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>