unpackaged/main/default/objects/RICSC_Wishlist__c/fields/RICSC_Size__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Size__c</fullName>
        <description>Size of the product in the wishlist</description>
        <label>Size</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>