unpackaged/main/default/objects/RICSC_Wishlist__c/fields/RICSC_Source__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Source__c</fullName>
        <description>Identify the source of the wishilist product</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Boutique</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>