unpackaged/main/default/objects/RICSC_Wishlist__c/fields/RICSC_WishlistName__c.field-meta.xml
<CustomField>
        <fullName>RICSC_WishlistName__c</fullName>
        <description>Name of the wishlist</description>
        <label>Wishlist Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>